Optimize the number of files
Delete files without source file

--- a/res/res_en_US.properties
+++ b/res/res_en_US.properties
@@ -896,5 +896,7 @@ MODULE=Module
 DETAIL=Detail
 ACTION=Action
 CONF=Config
-
-
+FACE_DEVICE=Face Recognition Device
+EDIT=edit
+NICKNAME=nickname
+SAVE=save
